# crossing-distances

./: .gitignore  Dockerfile  LICENSE  README.md  cross_walks_v2_0.geojson  data.ipynb  data.py  decoder_irv.csv  environment.yml  main.py  osmnx_test.ipynb  pyproject.toml  sam2-fine-tune-roboflow.ipynb  test_utils.py  utils.py
.github/workflows/: grow-cut.yml
config/: envs_100_cities.csv
figures/: clustering.py  map.py  utils.py
inference/: README.md  cli.py  crosswalk_image_ingest.py  entrypoint.py  find_missing.py  grow_cut.py  osm_ingest.py  osm_utils.py  run_inference.sh  sam_evaluation.py  sam_fine-tuning.py  sam_inference.ipynb  sam_inference.py  sam_inference_local.py  utils.py
tests/: README.md  evaluate_crosswalks.py  test_grow_cut.py  test_grow_cut_helpers.py  test_utils.py
