[project]
name = "crossing-distances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "modal>=0.64.151",
    "papermill>=2.6.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "segment-geospatial>=0.12.2",
    "semver>=3.0.4",
    "timm==1.0.9",
]
