[project]
name = "crossing-distances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "adjusttext>=1.3.0",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "modal==0.77",
    "networkx>=3.5",
    "papermill>=2.6.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "segment-geospatial>=0.12.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "semver>=3.0.4",
    "timm==1.0.9",
    "shapely>=2.1.1",
]
